# AdventOfCode2024

./: .gitignore  CMakeLists.txt  notes.md
day1/: CMakeLists.txt  main.cpp
day10/: day10.nb
day11/: day11.nb
day12/: CMakeLists.txt  TestDay12.cpp  day12.cpp  day12.h  main.cpp
day12part2/: CMakeLists.txt  TestDay12Part2.cpp  day12part2.cpp  main.cpp
day13/: day13.nb
day14/: day14.nb
day15/: code.wl  day15.nb
day16/: CMakeLists.txt  TestDay16.cpp  day16.cpp  day16.h  main.cpp
day16part2/: CMakeLists.txt  TestDay16Part2.cpp  day16.nb  day16part2.cpp  day16part2.h  example1-costs.txt  example2-costs.txt  input-costs.txt  main.cpp
day17/: day17.nb
day18/: CMakeLists.txt  TestDay18.cpp  day18.cpp  day18.h  main.cpp
day18part2/: CMakeLists.txt  TestDay18Part2.cpp  day18part2.cpp  day18part2.h  main.cpp
day19/: day19.nb
day1part2/: CMakeLists.txt  main.cpp
day2/: CMakeLists.txt  main.cpp
day20/: day20.nb
day21/: day21-work.nb  day21.nb  debugging 379A.md  debugging 805a.md
day22/: day22.nb
day23/: day23.nb
day24/: day24.nb  input-patched.txt
day25/: day25.nb
day2part2/: CMakeLists.txt  main.cpp
day3/: CMakeLists.txt  main.cpp
day3part2/: CMakeLists.txt  main.cpp
day4/: CMakeLists.txt  main.cpp
day4part2/: CMakeLists.txt  main.cpp
day5/: CMakeLists.txt  main.cpp
day5part2/: CMakeLists.txt  main.cpp
day6/: CMakeLists.txt  main.cpp
day6part2/: CMakeLists.txt  main.cpp
day7/: CMakeLists.txt  day7.nb  main.cpp
day7part2/: CMakeLists.txt  main.cpp
day8/: CMakeLists.txt  main.cpp
day8part2/: CMakeLists.txt  main.cpp
day9/: day 9 notes.md  day9.nb
